--- a/index.html
+++ b/index.html
@@ -185,80 +185,7 @@
         </div>
     </section>
       <!-- ================== FOOTER ================== -->
-    <footer>
-        <div class="social">
-            <div class="logo">
-                <img src="assets/img/bee 1.png" alt="">
-                <h3>Edudu </h3>
-            </div>
-                <div class="social-icons">
-                      <a href="https://twitter.com" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/x.svg" 
-         alt="Twitter" width="24">
-</a>
-
-                        <!-- Facebook -->
-                        <a href="https://facebook.com" target="_blank">
-                            <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" width="24">
-                        </a>
-
-                        <!-- LinkedIn -->
-                        <a href="https://linkedin.com" target="_blank">
-                            <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" width="24">
-                        </a>
-                </div>
-            <div class="icons">
-                <span>©2020 Edudu.co</span>
-                <span>Edudu is a registered
-                trademark of Edudu.co</span>
-            </div>
-        </div>
-        <div class="courses">
-            <h3>Courses</h3>
-            <ul>
-                <li><a href="">Classroom courses</a></li>
-                <li><a href="">Virtual classroom courses</a></li>
-                <li><a href="">E-learning courses</a></li>
-                <li><a href="">Video Courses</a></li>
-                <li><a href="">Offline Courses</a></li>
-            </ul>
-        </div>
-        <div class="community">
-            <h3>Community</h3>
-            <ul>
-                <li><a href="">Learners </a></li>
-                <li><a href="">Parteners</a></li>
-                <li><a href="">Developers</a></li>
-                <li><a href="">Transactions</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Teaching Center</a></li>
-
-            </ul>
-        </div>
-        <div class="links">
-            <h3>Quick links</h3>
-            <ul>
-                <li><a href="">Home </a></li>
-                <li><a href="">Professional Education</a></li>
-                <li><a href="">Courses</a></li>
-                <li><a href="">Admissions</a></li>
-                <li><a href="">Testimonial</a></li>
-                <li><a href="">Programs</a></li>
-            </ul>
-        </div>
-           <div class="more">
-            <h3>More</h3>
-            <ul>
-                <li><a href="">Press </a></li>
-                <li><a href=""> Investors</a></li>
-                <li><a href="">Terms</a></li>
-                <li><a href="">Privacy</a></li>
-                <li><a href="">Help</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </div>
-    </footer>
-
+   <div id="footer"></div>
 </body> 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
@@ -289,3 +216,4 @@
 
 
 </html>
+
